Remove port routes
